// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseSummary for 1 expense 1`] = `
<div>
  <h2>
    Viewing a total of 
    1
     
    expense
     for 
    $92.71
    .
  </h2>
</div>
`;

exports[`Should render ExpenseSummary for multiple expenses 1`] = `
<div>
  <h2>
    Viewing a total of 
    3
     
    expenses
     for 
    $92,221.71
    .
  </h2>
</div>
`;
